# static-code-analyzer

./: README.md  logging.conf  main.py  pyproject.toml
test/: test_0.py
